Add some packages

--- a/packages/webid/cms/composer.json
+++ b/packages/webid/cms/composer.json
@@ -15,10 +15,14 @@
         "laravel/nova": "~2.0|~3.0",
         "spatie/laravel-translatable": "^4.2",
         "infinety-es/nova-filemanager": "^2.6",
-        "joedixon/nova-translation": "dev-master",
+        "joedixon/nova-translation": "^1.0",
+        "idf/nova-html-card": "^1.2",
         "webid/language-tool": "*",
         "webid/nova-translatable": "*",
-        "digital-creative/collapsible-resource-manager": "dev-master"
+        "digital-creative/collapsible-resource-manager": "^1.2",
+        "digital-creative/conditional-container": "^1.1",
+        "eminiarts/nova-tabs": "^1.2",
+        "epartment/nova-dependency-container": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
