--- a/packages/webid/cms/mix-manifest.json
+++ b/packages/webid/cms/mix-manifest.json
@@ -1,3 +1,4 @@
 {
+    "/src/public/js/newsletter.js": "/src/public/js/newsletter.js",
     "/src/public/css/language.css": "/src/public/css/language.css"
 }
