Add some packages

--- a/packages/webid/cms/composer.json
+++ b/packages/webid/cms/composer.json
@@ -13,6 +13,8 @@
         "php": ">=7.1.0",
         "laravel/framework": "6.*",
         "laravel/nova": "~2.0|~3.0",
+        "spatie/laravel-honeypot": "^1.4",
+        "whitecube/nova-flexible-content": "^0.1.15",
         "spatie/laravel-translatable": "^4.2",
         "infinety-es/nova-filemanager": "^2.6",
         "joedixon/nova-translation": "^1.0",
@@ -21,6 +23,7 @@
         "webid/nova-translatable": "*",
         "digital-creative/collapsible-resource-manager": "^1.2",
         "digital-creative/conditional-container": "^1.1",
+        "tightenco/ziggy": "^0.9.0",
         "eminiarts/nova-tabs": "^1.2",
         "epartment/nova-dependency-container": "^1.2",
         "webid/component-field": "*",
