--- a/packages/webid/cms/mix-manifest.json
+++ b/packages/webid/cms/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/src/public/js/newsletter.js": "/src/public/js/newsletter.js",
-    "/src/public/css/language.css": "/src/public/css/language.css"
+    "/src/public/css/language.css": "/src/public/css/language.css",
+    "/src/public/js/send_form.js": "/src/public/js/send_form.js"
 }
