--- a/packages/webid/cms/package.json
+++ b/packages/webid/cms/package.json
@@ -29,8 +29,10 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.26",
         "@fortawesome/free-solid-svg-icons": "^5.12.0",
         "@fortawesome/vue-fontawesome": "^0.1.9",
+        "dropzone": "^5.7.0",
         "flag-icon-css": "^3.4.6",
         "vue-flag-icon": "^1.0.6",
+        "lang.js": "^1.1.14",
         "vue-toasted": "^1.1.27",
         "vue-multiselect": "^2.1.6"
     }
