--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "tightenco/ziggy": "^0.9.0",
         "eminiarts/nova-tabs": "^1.2",
         "epartment/nova-dependency-container": "^1.2",
-        "maatwebsite/laravel-nova-excel": "^1.1",
+        "maatwebsite/laravel-nova-excel": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
@@ -36,8 +36,6 @@
         "psr-4": {
             "App\\": "app/",
             "Webid\\Cms\\": "src/",
-            "Webid\\ComponentField\\" : "src/nova-components/ComponentField/src/",
-            "Webid\\ComponentTool\\" : "src/nova-components/ComponentTool/src/",
             "Webid\\FieldItemField\\" : "src/nova-components/FieldItemField/src/",
             "Webid\\GalleryItemField\\" : "src/nova-components/GalleryItemField/src/",
             "Webid\\ImageItemField\\" : "src/nova-components/ImageItemField/src/",
@@ -60,8 +58,6 @@
         "laravel": {
             "providers": [
                 "Webid\\Cms\\CmsServiceProvider",
-                "Webid\\ComponentField\\FieldServiceProvider",
-                "Webid\\ComponentTool\\ToolServiceProvider",
                 "Webid\\FieldItemField\\FieldServiceProvider",
                 "Webid\\GalleryItemField\\FieldServiceProvider",
                 "Webid\\ImageItemField\\FieldServiceProvider",
