--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
+            "App\\Models\\": "src/app/Models/Publish",
             "Webid\\Cms\\": "src/",
             "Webid\\FieldItemField\\" : "src/nova-components/FieldItemField/src/",
             "Webid\\GalleryItemField\\" : "src/nova-components/GalleryItemField/src/",
