--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,9 @@
             "Webid\\RecipientItemField\\" : "src/nova-components/RecipientItemField/src/",
             "Webid\\ServiceItemField\\" : "src/nova-components/ServiceItemField/src/",
             "Webid\\TemplateItemField\\" : "src/nova-components/TemplateItemField/src/",
-            "Webid\\TranslatableTool\\" : "src/nova-components/TranslatableTool/src/"
+            "Webid\\TranslatableTool\\" : "src/nova-components/TranslatableTool/src/",
+            "Webid\\MenuTool\\" : "src/nova-components/MenuTool/src/",
+            "Webid\\MenuItemField\\" : "src/nova-components/MenuItemField/src/"
         },
         "files": [
             "src/app/helpers.php"
@@ -65,7 +67,9 @@
                 "Webid\\RecipientItemField\\FieldServiceProvider",
                 "Webid\\ServiceItemField\\FieldServiceProvider",
                 "Webid\\TemplateItemField\\FieldServiceProvider",
-                "Webid\\TranslatableTool\\FieldServiceProvider"
+                "Webid\\TranslatableTool\\FieldServiceProvider",
+                "Webid\\MenuTool\\ToolServiceProvider",
+                "Webid\\MenuItemField\\FieldServiceProvider"
             ]
         }
     },
