--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/src/public/js/newsletter.js": "/src/public/js/newsletter.js",
-    "/src/public/css/language.css": "/src/public/css/language.css",
-    "/src/public/js/send_form.js": "/src/public/js/send_form.js"
+    "/src/public/cms/js/newsletter.js": "/src/public/cms/js/newsletter.js",
+    "/src/public/cms/css/language.css": "/src/public/cms/css/language.css",
+    "/src/public/cms/css/override_nova.css": "/src/public/cms/css/override_nova.css"
 }
