--- a/src/nova-components/TranslatableTool/package.json
+++ b/src/nova-components/TranslatableTool/package.json
@@ -17,6 +17,9 @@
     "dependencies": {
         "@tinymce/tinymce-vue": "^1.1.0",
         "trix": "^0.12.0",
-        "vue": "^2.5.0"
+        "vue": "^2.5.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.26",
+        "@fortawesome/free-solid-svg-icons": "^5.12.0",
+        "@fortawesome/vue-fontawesome": "^0.1.9"
     }
 }
