--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "joedixon/nova-translation": "^1.0",
         "idf/nova-html-card": "^1.2",
         "digital-creative/collapsible-resource-manager": "^1.2",
-        "digital-creative/conditional-container": "^1.1",
+        "digital-creative/conditional-container": "1.1.5",
         "tightenco/ziggy": "^0.9.0",
         "eminiarts/nova-tabs": "^1.2",
         "epartment/nova-dependency-container": "^1.2",
