--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
         "idf/nova-html-card": "^1.2",
         "digital-creative/collapsible-resource-manager": "^1.2",
         "digital-creative/conditional-container": "1.1.5",
-        "tightenco/ziggy": "^0.9.0",
         "eminiarts/nova-tabs": "^1.2",
         "epartment/nova-dependency-container": "^1.2",
-        "maatwebsite/laravel-nova-excel": "^1.1"
+        "maatwebsite/laravel-nova-excel": "^1.1",
+        "tightenco/ziggy": "^0.9.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
