--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "eminiarts/nova-tabs": "^1.2",
         "epartment/nova-dependency-container": "^1.2",
         "maatwebsite/laravel-nova-excel": "^1.1",
-        "tightenco/ziggy": "^0.9.3"
+        "tightenco/ziggy": "^0.9.3",
+        "spatie/laravel-varnish": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
@@ -42,7 +43,8 @@
             "Webid\\ServiceItemField\\" : "src/nova-components/ServiceItemField/src/",
             "Webid\\TranslatableTool\\" : "src/nova-components/TranslatableTool/src/",
             "Webid\\MenuTool\\" : "src/nova-components/MenuTool/src/",
-            "Webid\\MenuItemField\\" : "src/nova-components/MenuItemField/src/"
+            "Webid\\MenuItemField\\" : "src/nova-components/MenuItemField/src/",
+            "Webid\\CardActions\\" : "src/nova-components/CardActions/src/"
         },
         "files": [
             "src/app/helpers.php"
@@ -65,7 +67,8 @@
                 "Webid\\ServiceItemField\\FieldServiceProvider",
                 "Webid\\TranslatableTool\\FieldServiceProvider",
                 "Webid\\MenuTool\\ToolServiceProvider",
-                "Webid\\MenuItemField\\FieldServiceProvider"
+                "Webid\\MenuItemField\\FieldServiceProvider",
+                "Webid\\CardActions\\CardServiceProvider"
             ]
         }
     },
