--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "epartment/nova-dependency-container": "^1.2",
         "maatwebsite/laravel-nova-excel": "^1.1",
         "tightenco/ziggy": "^0.9.3",
-        "spatie/laravel-varnish": "dev-master"
+        "spatie/laravel-varnish": "^2.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
