--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "infinety-es/nova-filemanager": "^2.6",
         "idf/nova-html-card": "^1.2",
         "digital-creative/collapsible-resource-manager": "^1.2",
-        "digital-creative/conditional-container": "1.1.5",
+        "digital-creative/conditional-container": "^1.2",
         "eminiarts/nova-tabs": "^1.2",
         "epartment/nova-dependency-container": "^1.2",
         "maatwebsite/laravel-nova-excel": "^1.1",
