--- a/src/Modules/Newsletter/composer.json
+++ b/src/Modules/Newsletter/composer.json
@@ -10,7 +10,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "Webid\\Cms\\Src\\App\\Modules\\Newsletter\\Providers\\NewsletterServiceProvider"
+        "Webid\\Cms\\Src\\Modules\\Newsletter\\Providers\\NewsletterServiceProvider"
       ],
       "aliases": {
 
@@ -19,7 +19,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Webid\\Cms\\Src\\App\\Modules\\Newsletter\\": ""
+      "Webid\\Cms\\Src\\Modules\\Newsletter\\": ""
     }
   }
 }
