--- a/src/Modules/Form/composer.json
+++ b/src/Modules/Form/composer.json
@@ -10,7 +10,10 @@
   "extra": {
     "laravel": {
       "providers": [
-        "Webid\\Cms\\Src\\Modules\\Form\\Providers\\FormServiceProvider"
+        "Webid\\Cms\\Modules\\Form\\Providers\\FormServiceProvider",
+        "Webid\\RecipientItemField\\FieldServiceProvider",
+        "Webid\\ServiceItemField\\FieldServiceProvider",
+        "Webid\\FieldItemField\\FieldServiceProvider"
       ],
       "aliases": {
 
@@ -19,7 +22,10 @@
   },
   "autoload": {
     "psr-4": {
-      "Webid\\Cms\\Src\\Modules\\Form\\": ""
+      "Webid\\Cms\\Modules\\Form\\": "",
+      "Webid\\RecipientItemField\\" : "src/nova-components/RecipientItemField/src/",
+      "Webid\\ServiceItemField\\" : "src/nova-components/ServiceItemField/src/",
+      "Webid\\FieldItemField\\" : "src/nova-components/FieldItemField/src/"
     }
   }
 }
