--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,7 +6,7 @@ definitions:
       image: mysql:5.7
       environment:
         MYSQL_DATABASE: 'cms_test'
-        MYSQL_USER: 'homestead'
+        MYSQL_USER: 'cms_test'
         MYSQL_PASSWORD: 'secret'
         MYSQL_ROOT_PASSWORD: 'root'
 
