--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "tightenco/ziggy": "^0.9.3",
         "spatie/laravel-varnish": "^2.8",
         "optimistdigital/nova-multiselect-field": "^2.0",
-        "spatie/laravel-honeypot": "^2.3"
+        "spatie/laravel-honeypot": "^2.3",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
