--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -20,6 +20,7 @@ definitions:
         artifacts:
           - vendor/**
           - auth.json
+          - composer.lock
 
     - step: &tests
         name: Testing
