--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -27,6 +27,7 @@ definitions:
         script:
           - ./vendor/bin/security-checker security:check
           - ./vendor/bin/phpcs --report=full
+          - ./vendor/bin/psalm
           - ./vendor/bin/phpunit --no-coverage
         services:
           - mysql
