--- a/src/Modules/Form/composer.json
+++ b/src/Modules/Form/composer.json
@@ -7,6 +7,9 @@
       "email": "elise@web-id.fr"
     }
   ],
+  "require": {
+    "webid/fielditemfield": "*"
+  },
   "extra": {
     "laravel": {
       "providers": [
@@ -16,16 +19,21 @@
         "Webid\\FieldItemField\\FieldServiceProvider"
       ],
       "aliases": {
-
       }
     }
   },
   "autoload": {
     "psr-4": {
       "Webid\\Cms\\Modules\\Form\\": "",
-      "Webid\\RecipientItemField\\" : "nova-components/RecipientItemField/src/",
-      "Webid\\ServiceItemField\\" : "nova-components/ServiceItemField/src/",
-      "Webid\\FieldItemField\\" : "nova-components/FieldItemField/src/"
+      "Webid\\RecipientItemField\\": "nova-components/RecipientItemField/src/",
+      "Webid\\ServiceItemField\\": "nova-components/ServiceItemField/src/",
+      "Webid\\FieldItemField\\": "nova-components/FieldItemField/src/"
     }
-  }
+  },
+  "repositories": [
+    {
+      "type": "path",
+      "url": "./nova-components/FieldItemField"
+    }
+  ]
 }
