--- a/composer.json
+++ b/composer.json
@@ -27,14 +27,16 @@
         "spatie/laravel-varnish": "^2.8",
         "optimistdigital/nova-multiselect-field": "^2.0",
         "spatie/laravel-honeypot": "^2.3",
-        "ext-json": "*"
+        "ext-json": "*",
+        "nwidart/laravel-modules": "^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
         "sensiolabs/security-checker": "^6.0",
         "squizlabs/php_codesniffer": "^3.5",
         "vimeo/psalm": "^3.9",
-        "orchestra/testbench": "^6.0"
+        "orchestra/testbench": "^6.0",
+        "dillingham/nova-assertions": "^1.2"
     },
     "autoload": {
         "psr-4": {
@@ -58,6 +60,7 @@
     "autoload-dev": {
         "psr-4": {
             "Webid\\Cms\\Tests\\": "tests/",
+            "Webid\\ComponentTool\\" : "src/nova-components/ComponentTool/src/",
             "App\\": "src/app/"
         }
     },
