✨ Add sitemap generation & route

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "spatie/laravel-varnish": "^2.8",
         "optimistdigital/nova-multiselect-field": "^2.0",
         "spatie/laravel-honeypot": "^2.3",
-        "ext-json": "*"
+        "ext-json": "*",
+        "spatie/laravel-sitemap": "^5.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
