--- a/.github/workflows/cms-ci.yml
+++ b/.github/workflows/cms-ci.yml
@@ -6,10 +6,10 @@ jobs:
     steps:
 
       # Setup
-      - name: Setup PHP 7.3
+      - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '7.3'
+          php-version: '7.4'
           extensions: ext-gd
           tools: composer:v1
 
