--- a/.github/workflows/cms-ci.yml
+++ b/.github/workflows/cms-ci.yml
@@ -6,7 +6,7 @@ jobs:
 
     services:
       mysql:
-        image: mysql:5.7
+        image: mariadb:10.5.8
         env:
           MYSQL_DATABASE: cms_test
           MYSQL_USER: cms_test
@@ -55,8 +55,8 @@ jobs:
         run: ./vendor/bin/psalm
 
       # Tests that require database
-      - name: Starting MySQL
-        run: sudo systemctl start mysql.service
+#      - name: Starting MySQL
+#        run: sudo systemctl start mysql.service
 
       - name: Running phpunit
         run: ./vendor/bin/phpunit --no-coverage
