👷 Clean CI jobs file

--- a/.github/workflows/cms-ci.yml
+++ b/.github/workflows/cms-ci.yml
@@ -54,23 +54,19 @@ jobs:
       - name: Running psalm
         run: ./vendor/bin/psalm
 
-      # Tests that require database
-#      - name: Starting MySQL
-#        run: sudo systemctl start mysql.service
-
       - name: Running phpunit
         run: ./vendor/bin/phpunit --no-coverage
         env:
           DB_PORT: 32574
 
       # On failure
-#      - name: Slack Notification
-#        uses: rtCamp/action-slack-notify@v2
-#        if: ${{ failure() }}
-#        env:
-#          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-#          SLACK_COLOR: '#FF5555'
-#          SLACK_USERNAME: 'CMS CI'
-#          SLACK_ICON_EMOJI: ':see_no_evil:'
-#          SLACK_TITLE: Dernier commit
-#          SLACK_FOOTER: "“Je ne comprends pas, pourtant ça marche en local.” — inconnu"
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2
+        if: ${{ failure() }}
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_COLOR: '#FF5555'
+          SLACK_USERNAME: 'CMS CI'
+          SLACK_ICON_EMOJI: ':see_no_evil:'
+          SLACK_TITLE: Dernier commit
+          SLACK_FOOTER: "“Je ne comprends pas, pourtant ça marche en local.” — inconnu"
