--- a/.github/workflows/cms-ci.yml
+++ b/.github/workflows/cms-ci.yml
@@ -67,6 +67,6 @@ jobs:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_COLOR: '#FF5555'
           SLACK_USERNAME: 'CMS CI'
-          SLACK_ICON_EMOJI: ':see_no_evil:'
+          SLACK_ICON_EMOJI: ':hinhin:'
           SLACK_TITLE: Dernier commit
           SLACK_FOOTER: "“Je ne comprends pas, pourtant ça marche en local.” — inconnu"
