👷 Try to make package composer v2-compliant

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,8 @@
     "autoload": {
         "psr-4": {
             "Webid\\Cms\\": "src/",
+            "Webid\\Cms\\App\\": "src/app/",
+            "Webid\\Cms\\Database\\Factories\\": "src/database/factories/",
             "Webid\\FieldItemField\\" : "src/nova-components/FieldItemField/src/",
             "Webid\\GalleryItemField\\" : "src/nova-components/GalleryItemField/src/",
             "Webid\\ImageItemField\\" : "src/nova-components/ImageItemField/src/",
@@ -52,6 +54,7 @@
             "Webid\\MenuTool\\" : "src/nova-components/MenuTool/src/",
             "Webid\\MenuItemField\\" : "src/nova-components/MenuItemField/src/",
             "Webid\\CardActions\\" : "src/nova-components/CardActions/src/",
+            "Webid\\CardActions\\App\\" : "src/nova-components/CardActions/src/app/",
             "Webid\\PageUrlItemField\\" : "src/nova-components/PageUrlItemField/src/"
         },
         "files": [
