✨ Try some things for page preview

--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,8 @@
             "Webid\\MenuItemField\\" : "src/nova-components/MenuItemField/src/",
             "Webid\\CardActions\\" : "src/nova-components/CardActions/src/",
             "Webid\\CardActions\\App\\" : "src/nova-components/CardActions/src/app/",
-            "Webid\\PageUrlItemField\\" : "src/nova-components/PageUrlItemField/src/"
+            "Webid\\PageUrlItemField\\" : "src/nova-components/PageUrlItemField/src/",
+            "Webid\\CustomResourceToolbar\\": "src/nova-components/CustomResourceToolbar/src/"
         },
         "files": [
             "src/app/helpers.php"
@@ -84,7 +85,8 @@
                 "Webid\\CardActions\\CardServiceProvider",
                 "Webid\\PageUrlItemField\\FieldServiceProvider",
                 "Nwidart\\Modules\\LaravelModulesServiceProvider",
-                "Laravel\\Nova\\NovaServiceProvider"
+                "Laravel\\Nova\\NovaServiceProvider",
+                "Webid\\CustomResourceToolbar\\ToolServiceProvider"
             ]
         }
     },
