--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,8 @@
             "Webid\\RecipientItemField\\": "src/nova-components/RecipientItemField/src/",
             "Webid\\ServiceItemField\\": "src/nova-components/ServiceItemField/src/",
             "Webid\\CardActions\\App\\" : "src/nova-components/CardActions/src/app/",
-            "Webid\\PageUrlItemField\\" : "src/nova-components/PageUrlItemField/src/"
+            "Webid\\PageUrlItemField\\" : "src/nova-components/PageUrlItemField/src/",
+            "Webid\\ConfirmationEmailItemField\\" : "src/nova-components/ConfirmationEmailItemField/src/"
         },
         "files": [
             "src/app/helpers.php"
@@ -84,7 +85,8 @@
                 "Webid\\FieldItemField\\FieldServiceProvider",
                 "Webid\\PageUrlItemField\\FieldServiceProvider",
                 "Nwidart\\Modules\\LaravelModulesServiceProvider",
-                "Laravel\\Nova\\NovaServiceProvider"
+                "Laravel\\Nova\\NovaServiceProvider",
+                "Webid\\ConfirmationEmailItemField\\FieldServiceProvider"
             ]
         }
     },
