--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "spatie/laravel-honeypot": "^2.3",
         "ext-json": "*",
         "spatie/laravel-sitemap": "^5.8",
-        "nwidart/laravel-modules": "^8.0"
+        "nwidart/laravel-modules": "^8.0",
+        "optimistdigital/nova-settings": "^3.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
