--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": "^7.3|^8.0",
         "laravel/framework": "^8.12",
         "laravel/nova": "~2.0|~3.0",
-        "whitecube/nova-flexible-content": "^0.1.15",
+        "whitecube/nova-flexible-content": "^0.2.0",
         "spatie/laravel-translatable": "^4.2",
         "infinety-es/nova-filemanager": "^2.6",
         "idf/nova-html-card": "^1.2",
@@ -30,7 +30,8 @@
         "ext-json": "*",
         "spatie/laravel-sitemap": "^5.8",
         "nwidart/laravel-modules": "^8.0",
-        "optimistdigital/nova-settings": "^3.1"
+        "optimistdigital/nova-settings": "^3.1",
+        "symfony/polyfill-mbstring": "1.20.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
