--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "idf/nova-html-card": "^1.2",
         "digital-creative/collapsible-resource-manager": "^1.2",
         "digital-creative/conditional-container": "^1.2",
-        "eminiarts/nova-tabs": "^1.2",
+        "eminiarts/nova-tabs": "1.3.*",
         "epartment/nova-dependency-container": "^1.2",
         "maatwebsite/laravel-nova-excel": "^1.1",
         "tightenco/ziggy": "^0.9.3",
